2014-05-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: fixed "resolution" of custom
	graphs to have the same results of simple graphs when have data
	of more than one month.
	For SF bug #2425

2014-05-13  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/manage_recontask_form.php: Fix a field 
	that wasnt hidden in recon server form when select recon
	script mode.

2014-05-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.php
	godmode/reporting/reporting_builder.item_editor.php
	include/functions_reporting.php
	include/functions_reports.php: Added SLA Monthly reports. Its
	an enterprise feature, so here is only the code to hook it and
	some forms logic

	* include/functions_html.php: Add support to header styles in
	html_print_table function. Used in SLA monthly reports

2014-05-12  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_config.php: Added alert in header
	when safe_mode is on.

2014-05-11  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql: Changed the order
	of 'ALTER TABLE' and 'INSERT INTO' for trecon_script to avoid error.
	Added a missing column for trecon_script.

2014-05-11  Junichi Satoh  <junichi@rworks.jp>

	* install.php: Improved to adjust program paths in pandora db for
	FreeBSD. All packages and configuration files except operating
	system's base files are installed under /usr/local in FreeBSD.
	So, path settings in pandora db for some programs should be changed
	from the Linux default.
	And, fixed database creation failure with PostgreSQL.

2014-05-11  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb.postgreSQL.sql: Fixed that initial user (admin) cannot
	be logged in.

2014-05-11  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb.postgreSQL.sql, pandoradb.data.postgreSQL.sql: Fixed
	sql errors.

2014-05-10  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb.sql, pandoradb_data.sql: Fixed sql errors with MySQL5.6.
