@@ -1,5 +1,10 @@
 2014-05-14  Sergio Martin <sergio.martin@artica.es>
 
+	* extensions/realtime_graphs/ajax.php: Improve the commands of 
+	realtime graphs
+
+2014-05-14  Sergio Martin <sergio.martin@artica.es>
+
 	* include/functions_graph.php: fixed "resolution" of custom
 	graphs to have the same results of simple graphs when have data
 	of more than one month.
